@@ -1,14 +1,20 @@
 package com.example.productservice.service.impl;
 
 import com.example.productservice.dto.CreateProductRequest;
+import com.example.productservice.dto.CursorProductDto;
 import com.example.productservice.dto.ProductDto;
+import com.example.productservice.mapper.ProductMapper;
 import com.example.productservice.model.Product;
 import com.example.productservice.repository.ProductRepository;
 import com.example.productservice.service.ProductService;
 import com.example.springbootmicroservicesframework.pagination.AppPageRequest;
 import com.example.springbootmicroservicesframework.pagination.AppSortOrder;
+import com.example.springbootmicroservicesframework.pagination.CursorPageRequest;
+import com.example.springbootmicroservicesframework.pagination.CursorPageResponse;
 import com.example.springbootmicroservicesframework.pagination.MultiSortPageRequest;
-import com.example.springbootmicroservicesframework.utils.Const;
+import com.example.springbootmicroservicesframework.pagination.PageSpecification;
+import com.example.springbootmicroservicesframework.pagination.PageUtils;
+import com.example.springbootmicroservicesframework.utils.AppReflectionUtils;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
@@ -17,7 +23,6 @@ import org.apache.commons.collections4.CollectionUtils;
 import org.modelmapper.ModelMapper;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
@@ -25,6 +30,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -35,6 +41,8 @@ public class ProductServiceImpl implements ProductService {
     final ProductRepository productRepository;
 
     final ModelMapper modelMapper;
+
+    final ProductMapper productMapper;
 
     @Transactional
     @Override
@@ -50,13 +58,11 @@ public class ProductServiceImpl implements ProductService {
     }
 
     @Override
-    public PageImpl<ProductDto> findAll(Integer page, Integer size, Sort sort) {
-        Pageable pageable = PageRequest.of(page, size, sort);
+    public PageImpl<ProductDto> findAll(Integer pageNumber, Integer pageSize, Sort sort) {
+        Pageable pageable = PageUtils.buildPageable(pageNumber, pageSize, sort);
         Page<Product> result = productRepository.findAll(pageable);
-        List<ProductDto> productDto = result.stream().map(product -> modelMapper.map(product, ProductDto.class)).toList();
-        return new PageImpl<>(productDto,
-                PageRequest.of(page + 1, size, sort),
-                result.getTotalElements());
+        List<ProductDto> productDtoList = result.stream().map(product -> modelMapper.map(product, ProductDto.class)).toList();
+        return PageUtils.buildAppPageImpl(pageNumber, pageSize, sort, result.getTotalElements(), productDtoList);
     }
 
     @Override
@@ -64,19 +70,35 @@ public class ProductServiceImpl implements ProductService {
         List<AppSortOrder> orderList = request.getOrderList();
         List<Sort.Order> orders = new ArrayList<>();
         if (CollectionUtils.isNotEmpty(orderList)) {
-            orders = orderList.stream().map(AppSortOrder::mapToSortOrder).toList();
+            orders = orderList.stream().map(AppSortOrder::mapToSortOrder).collect(Collectors.toList());
         }
-        Sort.Order defaultOrder = new Sort.Order(Sort.Direction.ASC, Const.ID);
-        orders.add(defaultOrder);
-        return findAll(request.getPageNumber() - 1, request.getPageSize(), Sort.by(orders));
+        PageUtils.addDefaultOrder(orders);
+        return findAll(request.getPageNumber(), request.getPageSize(), Sort.by(orders));
     }
 
     @Override
     public PageImpl<ProductDto> findAll(AppPageRequest request) {
-        return findAll(request.getPageNumber() - 1,
+        return findAll(request.getPageNumber(),
                 request.getPageSize(),
                 Sort.by(Sort.Direction.fromString(request.getSortDirection()),
                         request.getSortColumn()));
+    }
+
+    @Override
+    public CursorPageResponse<CursorProductDto> findAllCursorPagination(CursorPageRequest request) throws IllegalAccessException {
+        var specification = new PageSpecification<Product>(request);
+        var productPage = productRepository.findAll(specification, Pageable.ofSize(request.getPageSize()));
+        if (CollectionUtils.isEmpty(productPage.getContent())) {
+            return PageUtils.buildBlankCursorPageResponse(productPage);
+        }
+        var cursorProductDtoList = productPage.getContent().stream().map(product -> productMapper.mapCursorProductDto(product, new CursorProductDto())).toList();
+        Object fieldFirstElement = AppReflectionUtils.getField(CursorProductDto.class, request.getSortColumn(), cursorProductDtoList.get(0));
+        Object fieldLastElement = AppReflectionUtils.getField(CursorProductDto.class, request.getSortColumn(), cursorProductDtoList.get(cursorProductDtoList.size() - 1));
+        return new CursorPageResponse<>(cursorProductDtoList,
+                PageUtils.getEncodedCursor(String.valueOf(fieldFirstElement)),
+                PageUtils.getEncodedCursor(String.valueOf(fieldLastElement)),
+                productPage
+        );
     }
 }
 
